Even more modular scenes, now you can delete them.