@@ -41,8 +41,8 @@ public class Main extends PApplet {
         allStands[1] = cabinet;
         allStands[2] = door;
         allOCs = new OC[0];
-        scenes.add(new Scene());
-        scene = scenes.get(0);
+        scenes.add(new Scene(0));
+        scene = scenes.getFirst();
     }
 
     public void setup() {
@@ -146,203 +146,241 @@ public class Main extends PApplet {
     }
 
     public void mousePressed() {
-        if (gui.currentScreen == GUI.SCREEN.PRELOGIN) {
-            if (gui.plog1.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.LOGIN;
-            if (gui.plog2.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.SIGNUP;
-            if (gui.exit.mouseOverButton(this)) exit();
-        } else if (gui.currentScreen == GUI.SCREEN.LOGIN) {
-            if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.PRELOGIN;
-            if (gui.login.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
-            gui.tflogin1.isPressed(this);
-            gui.tflogin2.isPressed(this);
-            if (!gui.tflogin1.mouseOverTextField(this) && gui.tflogin1.selected) gui.tflogin1.keyPressed('0', ENTER);
-            if (!gui.tflogin2.mouseOverTextField(this) && gui.tflogin2.selected) gui.tflogin2.keyPressed('0', ENTER);
-        } else if (gui.currentScreen == GUI.SCREEN.SIGNUP) {
-            if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.PRELOGIN;
-            if (gui.signup.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
-            gui.tfsignup1.isPressed(this);
-            gui.tfsignup2.isPressed(this);
-            gui.tfsignup3.isPressed(this);
-            gui.tfsignup4.isPressed(this);
-            if (!gui.tfsignup1.mouseOverTextField(this) && gui.tfsignup1.selected) gui.tfsignup1.keyPressed('0', ENTER);
-            if (!gui.tfsignup2.mouseOverTextField(this) && gui.tfsignup2.selected) gui.tfsignup2.keyPressed('0', ENTER);
-            if (!gui.tfsignup3.mouseOverTextField(this) && gui.tfsignup3.selected) gui.tfsignup3.keyPressed('0', ENTER);
-            if (!gui.tfsignup4.mouseOverTextField(this) && gui.tfsignup4.selected) gui.tfsignup4.keyPressed('0', ENTER);
-        } else if (gui.currentScreen == GUI.SCREEN.MAIN) {
-            if (gui.q1.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.QNA;
-            if (gui.m1.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.SCENESELECTOR;
-            if (gui.m2.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.OCVIEWER;
-            if (gui.m3.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.PRELOGIN;
-        } else if (gui.currentScreen == GUI.SCREEN.QNA) {
-            if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
-        } else if (gui.currentScreen == GUI.SCREEN.SCENESELECTOR) {
-            if (gui.exit.mouseOverButton(this)) {
-                gui.currentScreen = GUI.SCREEN.MAIN;
-                gui.page = 0;
-            }
-            if (gui.nav1.mouseOverButton(this)&&gui.nav1.enabled) gui.page = 0;
-            if (gui.nav2.mouseOverButton(this)&&gui.nav2.enabled && gui.page > 0) gui.page--;
-            if (gui.nav3.mouseOverButton(this)&&gui.nav3.enabled && gui.page < 9) gui.page++;
-            if (gui.nav4.mouseOverButton(this)&&gui.nav4.enabled) gui.page = 9;
-            for (int i = 15 * gui.page; i < Math.min(15 * (gui.page + 1), gui.scenes.size()); i++) {
-                if (gui.scenes.get(i).mouseOverButton(this)) {
-                    if (gui.scenes.get(i).mouseOverButton(this) && gui.scenes.get(i).state != STATE.NULL) {
-                        if (gui.scenes.get(i).state == STATE.PLUS) {
-                            scenes.add(new Scene());
-                            gui.scenes.get(i).state = STATE.NORM;
-                            gui.scenes.get(i+1).state = STATE.PLUS;
-                        } else {
-                            scene = scenes.get(i);
-                            redoSceneEditorValues();
+        if (mouseButton == LEFT) {
+            if (gui.currentScreen == GUI.SCREEN.PRELOGIN) {
+                if (gui.plog1.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.LOGIN;
+                if (gui.plog2.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.SIGNUP;
+                if (gui.exit.mouseOverButton(this)) exit();
+            } else if (gui.currentScreen == GUI.SCREEN.LOGIN) {
+                if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.PRELOGIN;
+                if (gui.login.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
+                gui.tflogin1.isPressed(this);
+                gui.tflogin2.isPressed(this);
+                if (!gui.tflogin1.mouseOverTextField(this) && gui.tflogin1.selected)
+                    gui.tflogin1.keyPressed('0', ENTER);
+                if (!gui.tflogin2.mouseOverTextField(this) && gui.tflogin2.selected)
+                    gui.tflogin2.keyPressed('0', ENTER);
+            } else if (gui.currentScreen == GUI.SCREEN.SIGNUP) {
+                if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.PRELOGIN;
+                if (gui.signup.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
+                gui.tfsignup1.isPressed(this);
+                gui.tfsignup2.isPressed(this);
+                gui.tfsignup3.isPressed(this);
+                gui.tfsignup4.isPressed(this);
+                if (!gui.tfsignup1.mouseOverTextField(this) && gui.tfsignup1.selected)
+                    gui.tfsignup1.keyPressed('0', ENTER);
+                if (!gui.tfsignup2.mouseOverTextField(this) && gui.tfsignup2.selected)
+                    gui.tfsignup2.keyPressed('0', ENTER);
+                if (!gui.tfsignup3.mouseOverTextField(this) && gui.tfsignup3.selected)
+                    gui.tfsignup3.keyPressed('0', ENTER);
+                if (!gui.tfsignup4.mouseOverTextField(this) && gui.tfsignup4.selected)
+                    gui.tfsignup4.keyPressed('0', ENTER);
+            } else if (gui.currentScreen == GUI.SCREEN.MAIN) {
+                if (gui.q1.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.QNA;
+                if (gui.m1.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.SCENESELECTOR;
+                if (gui.m2.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.OCVIEWER;
+                if (gui.m3.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.PRELOGIN;
+            } else if (gui.currentScreen == GUI.SCREEN.QNA) {
+                if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
+            } else if (gui.currentScreen == GUI.SCREEN.SCENESELECTOR) {
+                if (gui.exit.mouseOverButton(this)) {
+                    gui.currentScreen = GUI.SCREEN.MAIN;
+                    gui.page = 0;
+                }
+                if (gui.nav1.mouseOverButton(this) && gui.nav1.enabled) gui.page = 0;
+                if (gui.nav2.mouseOverButton(this) && gui.nav2.enabled && gui.page > 0) gui.page--;
+                if (gui.nav3.mouseOverButton(this) && gui.nav3.enabled && gui.page < 9) gui.page++;
+                if (gui.nav4.mouseOverButton(this) && gui.nav4.enabled) gui.page = 9;
+                for (int i = 15 * gui.page; i < Math.min(15 * (gui.page + 1), gui.scenes.size()); i++) {
+                    if (gui.scenes.get(i).mouseOverButton(this)) {
+                        if (gui.scenes.get(i).mouseOverButton(this) && gui.scenes.get(i).state != STATE.NULL) {
+                            if (gui.scenes.get(i).state == STATE.PLUS) {
+                                scenes.add(new Scene(scenes.size()));
+                                gui.scenes.get(i).state = STATE.NORM;
+                                scenes.get(i).name = gui.scenes.get(i).bText;
+                                gui.scenes.get(i + 1).state = STATE.PLUS;
+                                gui.scenes.get(scenes.size()).updateSceneButton(scenes.size());
+                            } else {
+                                scenes.get(i).name = gui.scenes.get(i).bText;
+                                gui.scName.text = scenes.get(i).name;
+                                scene = scenes.get(i);
 
-                            gui.currentScreen = GUI.SCREEN.SCENEEDITOR;
-                            scene.selPage = 0;
-                            sceneEditorInitialized = false;
+                                if (scene.nObjects == 0) {
+                                    instanceZwolf();
+                                }
+
+                                redoSceneEditorValues();
+
+                                gui.currentScreen = GUI.SCREEN.SCENEEDITOR;
+                                scene.selPage = 0;
+                                sceneEditorInitialized = false;
+                            }
                         }
                     }
                 }
-            }
-        } else if (gui.currentScreen == GUI.SCREEN.SCENEEDITOR) {
-            if (firstClick){
-            if (scene.sel != Scene.scInstance.DISPLAY) {
-                int start = scene.selPage * 10;
-                int end = Math.min(selects.length, start + 10);
-                for (int i = start; i < end; i++) {
-                    if (selects[i].mouseOverButton(this)&&selects[i].isEnabled) {
-                        addThisOC(selects[i].oc);
+            } else if (gui.currentScreen == GUI.SCREEN.SCENEEDITOR) {
+                if (firstClick) {
+                    if (scene.sel != Scene.scInstance.DISPLAY) {
+                        int start = scene.selPage * 10;
+                        int end = Math.min(selects.length, start + 10);
+                        for (int i = start; i < end; i++) {
+                            if (selects[i].mouseOverButton(this) && selects[i].isEnabled) {
+                                addThisOC(selects[i].oc);
+                            }
+                        }
                     }
-                }
-            }
+                    gui.scName.isPressed(this);
+                    if (!gui.scName.mouseOverTextField(this) && gui.scName.selected) gui.scName.keyPressed('0', ENTER);
 
-            if (gui.exit.mouseOverButton(this)) {
-                scene.sel = Scene.scInstance.DISPLAY;
-                scene.selPage = 0;
-                gui.currentScreen = GUI.SCREEN.SCENESELECTOR;
-                scene = null;
-                firstClick = false;
-            }
-            if (gui.rsced1.mouseOverButton(this)) gui.gridon = !gui.gridon;
-            for (int i = 0; i < gui.tfsced.length; i++) {
-                if (i != 2 && i != 4) {
-                    gui.tfsced[i].isPressed(this);
-                    if (!gui.tfsced[i].mouseOverTextField(this) && gui.tfsced[i].selected) gui.tfsced[i].keyPressed('0', ENTER);
-                }
-            }
-            if (this.scene != null) {
-                if (scene.sel != Scene.scInstance.OCSELECT) {
-                    for (int i = 1; i < gui.slSced.length; i++) {
-                        if (i == 2 || i == 4) continue;
-                        if (gui.slSced[i].mouseOnSlider(this, scene)) {
-                            gui.slSced[i].checkSlider(this, scene);
-                            selectedSl = gui.slSced[i];
-                            if (i >= 7 && i < 10) gui.tfsced[i].setText(String.valueOf((int) gui.slSced[i].v));
-                            else gui.tfsced[i].setText(String.format("%.2f", gui.slSced[i].v));
-                        } else {
-                            String txt = gui.tfsced[i].getText().replace(',', '.');
-                            if (txt.matches("\\d*(\\.\\d{0,2})?") && !txt.isEmpty()) {
-                                if (i >= 6 && i < 10) {
-                                    int value = (int) Float.parseFloat(txt);
-                                    value = (int) constrain(value, gui.slSced[i].minV, gui.slSced[i].maxV);
-                                    gui.slSced[i].v = value;
-                                    gui.tfsced[i].setText(String.valueOf(value));
+
+                    if (gui.exit.mouseOverButton(this)) {
+                        scene.sel = Scene.scInstance.DISPLAY;
+                        scene.selPage = 0;
+                        gui.currentScreen = GUI.SCREEN.SCENESELECTOR;
+                        gui.scenes.get(scene.ID).bText = gui.scName.text;
+                        if (scene.nObjects == 0){
+                            deleteScene(scene);
+                        }
+                        scene = null;
+                        firstClick = false;
+                    }
+                    if (gui.rsced1.mouseOverButton(this)) gui.gridon = !gui.gridon;
+                    for (int i = 0; i < gui.tfsced.length; i++) {
+                        if (i != 2 && i != 4) {
+                            gui.tfsced[i].isPressed(this);
+                            if (!gui.tfsced[i].mouseOverTextField(this) && gui.tfsced[i].selected)
+                                gui.tfsced[i].keyPressed('0', ENTER);
+                        }
+                    }
+
+                    if (this.scene != null) {
+                        if (scene.sel != Scene.scInstance.OCSELECT) {
+                            for (int i = 1; i < gui.slSced.length; i++) {
+                                if (i == 2 || i == 4) continue;
+                                if (gui.slSced[i].mouseOnSlider(this, scene)) {
+                                    gui.slSced[i].checkSlider(this, scene);
+                                    selectedSl = gui.slSced[i];
+                                    if (i >= 7 && i < 10) gui.tfsced[i].setText(String.valueOf((int) gui.slSced[i].v));
+                                    else gui.tfsced[i].setText(String.format("%.2f", gui.slSced[i].v));
                                 } else {
-                                    float value = Float.parseFloat(txt);
-                                    value = constrain(value, gui.slSced[i].minV, gui.slSced[i].maxV);
-                                    gui.slSced[i].v = value;
-                                    gui.tfsced[i].setText(String.format("%.2f", value));
+                                    String txt = gui.tfsced[i].getText().replace(',', '.');
+                                    if (txt.matches("\\d*(\\.\\d{0,2})?") && !txt.isEmpty()) {
+                                        if (i >= 6 && i < 10) {
+                                            int value = (int) Float.parseFloat(txt);
+                                            value = (int) constrain(value, gui.slSced[i].minV, gui.slSced[i].maxV);
+                                            gui.slSced[i].v = value;
+                                            gui.tfsced[i].setText(String.valueOf(value));
+                                        } else {
+                                            float value = Float.parseFloat(txt);
+                                            value = constrain(value, gui.slSced[i].minV, gui.slSced[i].maxV);
+                                            gui.slSced[i].v = value;
+                                            gui.tfsced[i].setText(String.format("%.2f", value));
+                                        }
+                                    }
+                                    updateCalculatedValues();
                                 }
                             }
-                            updateCalculatedValues();
                         }
-                    }
-                }
 
-                if (gui.sced1.mouseOverButton(this)) instanceOC();
-                if (gui.sced2.mouseOverButton(this)) {
-                    scene.sel = Scene.scInstance.OCSELECT;
-                }
-                if (gui.sced4.enabled && gui.sced4.mouseOverButton(this)) {
-                    if (scene.sel == Scene.scInstance.DISPLAY) {
-                        if (scene.nObjects > 0) {
-                            scene.currentObject = (scene.currentObject + 1) % scene.nObjects;
-                            if (scene.stands[scene.currentObject] instanceof OC pHolder) {
-                                changeTFValues(pHolder);
-                                gui.slSced[1].v = pHolder.tHeight;
-                                gui.slSced[2].v = pHolder.weight;
-                                gui.slSced[3].v = pHolder.BMI;
-                                gui.slSced[4].v = pHolder.tWidth;
-                                gui.slSced[5].v = pHolder.bhratio;
-                                gui.slSced[6].v = pHolder.age;
-                                gui.slSced[7].v = pHolder.r;
-                                gui.slSced[8].v = pHolder.g;
-                                gui.slSced[9].v = pHolder.b;
-                                selectedSl = null;
-                                updateCalculatedValues();
+                        if (gui.sced1.mouseOverButton(this)) instanceOC();
+                        if (gui.sced2.mouseOverButton(this)) {
+                            scene.sel = Scene.scInstance.OCSELECT;
+                        }
+                        if (gui.sced4.enabled && gui.sced4.mouseOverButton(this)) {
+                            if (scene.sel == Scene.scInstance.DISPLAY) {
+                                if (scene.nObjects > 0) {
+                                    scene.currentObject = (scene.currentObject + 1) % scene.nObjects;
+                                    if (scene.stands[scene.currentObject] instanceof OC pHolder) {
+                                        changeTFValues(pHolder);
+                                        gui.slSced[1].v = pHolder.tHeight;
+                                        gui.slSced[2].v = pHolder.weight;
+                                        gui.slSced[3].v = pHolder.BMI;
+                                        gui.slSced[4].v = pHolder.tWidth;
+                                        gui.slSced[5].v = pHolder.bhratio;
+                                        gui.slSced[6].v = pHolder.age;
+                                        gui.slSced[7].v = pHolder.r;
+                                        gui.slSced[8].v = pHolder.g;
+                                        gui.slSced[9].v = pHolder.b;
+                                        selectedSl = null;
+                                        updateCalculatedValues();
+                                    }
+                                }
+                            } else {
+                                scene.selPage++;
                             }
                         }
-                    } else {
-                        scene.selPage++;
-                    }
-                }
 
-                if (gui.sced3.enabled && gui.sced3.mouseOverButton(this)) {
-                    if (scene.sel == Scene.scInstance.DISPLAY) {
-                        if (scene.nObjects > 0) {
-                            scene.currentObject = (scene.currentObject - 1 + scene.nObjects) % scene.nObjects;
-                            if (scene.stands[scene.currentObject] instanceof OC pHolder) {
-                                changeTFValues(pHolder);
-                                gui.slSced[1].v = pHolder.tHeight;
-                                gui.slSced[2].v = pHolder.weight;
-                                gui.slSced[3].v = pHolder.BMI;
-                                gui.slSced[4].v = pHolder.tWidth;
-                                gui.slSced[5].v = pHolder.bhratio;
-                                gui.slSced[6].v = pHolder.age;
-                                gui.slSced[7].v = pHolder.r;
-                                gui.slSced[8].v = pHolder.g;
-                                gui.slSced[9].v = pHolder.b;
-                                selectedSl = null;
-                                updateCalculatedValues();
+                        if (gui.sced3.enabled && gui.sced3.mouseOverButton(this)) {
+                            if (scene.sel == Scene.scInstance.DISPLAY) {
+                                if (scene.nObjects > 0) {
+                                    scene.currentObject = (scene.currentObject - 1 + scene.nObjects) % scene.nObjects;
+                                    if (scene.stands[scene.currentObject] instanceof OC pHolder) {
+                                        changeTFValues(pHolder);
+                                        gui.slSced[1].v = pHolder.tHeight;
+                                        gui.slSced[2].v = pHolder.weight;
+                                        gui.slSced[3].v = pHolder.BMI;
+                                        gui.slSced[4].v = pHolder.tWidth;
+                                        gui.slSced[5].v = pHolder.bhratio;
+                                        gui.slSced[6].v = pHolder.age;
+                                        gui.slSced[7].v = pHolder.r;
+                                        gui.slSced[8].v = pHolder.g;
+                                        gui.slSced[9].v = pHolder.b;
+                                        selectedSl = null;
+                                        updateCalculatedValues();
+                                    }
+                                }
+                            } else {
+                                if (scene.selPage != 0) scene.selPage--;
                             }
                         }
-                    } else {
-                        if (scene.selPage != 0) scene.selPage--;
+
+                        if (gui.sced5.mouseOverButton(this) && gui.sced5.enabled) {
+                            if (scene.sel == Scene.scInstance.OCSELECT) {
+                                scene.sel = Scene.scInstance.DISPLAY;
+                            } else {
+                                scene.deleteObject(scene.stands[scene.currentObject]);
+                                if (scene.currentObject != -1) {
+                                    OC pHolder = (OC) scene.stands[scene.currentObject];
+                                    gui.slSced[1].v = pHolder.tHeight;
+                                    gui.slSced[2].v = pHolder.weight;
+                                    gui.slSced[3].v = pHolder.BMI;
+                                    gui.slSced[4].v = pHolder.tWidth;
+                                    gui.slSced[5].v = pHolder.bhratio;
+                                    gui.slSced[6].v = pHolder.age;
+                                    gui.slSced[7].v = pHolder.r;
+                                    gui.slSced[8].v = pHolder.g;
+                                    gui.slSced[9].v = pHolder.b;
+                                    changeTFValues(pHolder);
+                                }
+                            }
+                        }
                     }
+                    if (scene != null) updateCalculatedValues();
                 }
 
-                if (gui.sced5.mouseOverButton(this) && gui.sced5.enabled) {
-                    if (scene.sel == Scene.scInstance.OCSELECT) {
-                        scene.sel = Scene.scInstance.DISPLAY;
-                    } else {
-                        scene.deleteObject(scene.stands[scene.currentObject]);
-                        if (scene.currentObject != -1) {
-                            OC pHolder = (OC) scene.stands[scene.currentObject];
-                            gui.slSced[1].v = pHolder.tHeight;
-                            gui.slSced[2].v = pHolder.weight;
-                            gui.slSced[3].v = pHolder.BMI;
-                            gui.slSced[4].v = pHolder.tWidth;
-                            gui.slSced[5].v = pHolder.bhratio;
-                            gui.slSced[6].v = pHolder.age;
-                            gui.slSced[7].v = pHolder.r;
-                            gui.slSced[8].v = pHolder.g;
-                            gui.slSced[9].v = pHolder.b;
-                            changeTFValues(pHolder);
-                        }
+            } else if (gui.currentScreen == GUI.SCREEN.OCVIEWER) {
+                if (gui.nav1.mouseOverButton(this)) scedPage = 0;
+                if (gui.nav2.mouseOverButton(this) && scedPage > 0) scedPage--;
+                if (gui.nav3.mouseOverButton(this) && scedPage < (slabs.length - 1) / 5) scedPage++;
+                if (gui.nav4.mouseOverButton(this)) scedPage = (slabs.length - 1) / 5;
+                if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
+                for (int i = 0; i < nAllOCs; i++) {
+                    if (slabs[i].delete.mouseOverButton(this)) {
+                        deleteOCfromBase(allOCs[i]);
+                        break;
                     }
                 }
             }
-                if (scene != null) updateCalculatedValues();
-            }
-
-        } else if (gui.currentScreen == GUI.SCREEN.OCVIEWER) {
-            if (gui.nav1.mouseOverButton(this)) scedPage = 0;
-            if (gui.nav2.mouseOverButton(this) && scedPage > 0) scedPage--;
-            if (gui.nav3.mouseOverButton(this) && scedPage < (slabs.length - 1) / 5) scedPage++;
-            if (gui.nav4.mouseOverButton(this)) scedPage = (slabs.length - 1) / 5;
-            if (gui.exit.mouseOverButton(this)) gui.currentScreen = GUI.SCREEN.MAIN;
-            for (int i = 0; i < nAllOCs; i++){
-                if (slabs[i].delete.mouseOverButton(this)) {
-                    deleteOCfromBase(allOCs[i]);
-                    break;
+        } else if (mouseButton == RIGHT){
+            print ("Right Button");
+            if (gui.currentScreen == GUI.SCREEN.SCENESELECTOR){
+                for (int i = 15 * gui.page; i < Math.min(15 * (gui.page + 1), gui.scenes.size()); i++) {
+                    if (gui.scenes.get(i).mouseOverButton(this)) {
+                        print ("Right Button in button "+gui.scenes.get(i).bText);
+                        if (gui.scenes.get(i).mouseOverButton(this) && gui.scenes.get(i).state == STATE.NORM){
+                            deleteScene(scenes.get(i));
+                        }
+                    }
                 }
             }
         }
@@ -359,6 +397,9 @@ public class Main extends PApplet {
             gui.tfsignup4.keyPressed(key, keyCode);
         } else if (gui.currentScreen == GUI.SCREEN.SCENEEDITOR) {
             if (scene.sel != Scene.scInstance.OCSELECT) {
+                if (gui.scName.selected){
+                    gui.scName.keyPressed(key, keyCode);
+                }
                 for (int i = 0; i < gui.tfsced.length; i++) {
                     if (i == 2 || i == 4) continue;
                     gui.tfsced[i].keyPressed(key, keyCode);
@@ -423,38 +464,6 @@ public class Main extends PApplet {
         nAllOCs++;
     }
 
-    public void copyOC(OC copier) {
-        OC copied = new OC(copier.ID);
-
-        copied.name = copier.name;
-        copied.tHeight = copier.tHeight;
-        copied.weight = copier.weight;
-        copied.BMI = copier.BMI;
-        copied.tWidth = copier.tWidth;
-        copied.bhratio = copier.bhratio;
-        copied.age = copier.age;
-        copied.r = copier.r;
-        copied.g = copier.g;
-        copied.b = copier.b;
-
-        allOCs = java.util.Arrays.copyOf(allOCs, nAllOCs + 1);
-        slabs = java.util.Arrays.copyOf(slabs, nAllOCs + 1);
-        selects = java.util.Arrays.copyOf(selects, nAllOCs + 1);
-
-        copied.ID = copier.ID;
-        copied.uniqueID = copier.uniqueID;
-
-        allOCs[nAllOCs] = copied;
-        slabs[nAllOCs] = new InfoSlab(copied, this);
-        selects[nAllOCs] = new SelectSlab(this, copied);
-
-        nAllOCs++;
-
-        scene.addObject(copied);
-        scene.designLayout();
-    }
-
-
     public void deleteOCfromBase(OC oc) {
         int index = -1;
         for (int i = 0; i < nAllOCs; i++) {
@@ -505,6 +514,39 @@ public class Main extends PApplet {
         slabs = java.util.Arrays.copyOf(slabs, nAllOCs);
         selects = java.util.Arrays.copyOf(selects, nAllOCs);
     }
+
+    public void deleteScene(Scene sc) {
+        int index = -1;
+        for (int i = 0; i < scenes.size(); i++) {
+            if (sc.ID == scenes.get(i).ID) {
+                index = i;
+                break;
+            }
+        }
+        if (index == -1) return;
+
+        scenes.remove(index);
+        gui.scenes.remove(index);
+
+        for (int i = index; i < scenes.size(); i++) {
+            scenes.get(i).ID = i;
+            gui.scenes.get(i).updateSceneButton(i);
+        }
+
+        gui.scenes.get(scenes.size()).updateSceneButton(scenes.size());
+
+        for (int i = 0; i < scenes.size(); i++) {
+            int k = scenes.get(i).ID % 5;
+            int j = (scenes.get(i).ID / 5) % 3;
+
+            int x = k * 250 + 120;
+            int y = j * 212 + 200;
+
+            gui.scenes.get(i).x = x;
+            gui.scenes.get(i).y = y;
+        }
+    }
+
 
 
 
@@ -602,6 +644,35 @@ public class Main extends PApplet {
 
         changeTFValues(pHolder);
         addNewOCtoBase(pHolder);
+        scene.addObject(pHolder);
+    }
+
+    public void instanceZwolf() {
+        OC pHolder = new OC(nAllOCs);
+
+        gui.slSced[1].v = 1.83f;
+        gui.slSced[2].v = (float) Math.pow(1.83f, 2) * 25;
+        gui.slSced[3].v = 25;
+        gui.slSced[4].v = (float) Math.pow(25, 0.7979) / 81.906f;
+        gui.slSced[6].v = 25;
+        gui.slSced[5].v = 0.1295f;
+        gui.slSced[7].v = 127;
+        gui.slSced[8].v = 127;
+        gui.slSced[9].v = 127;
+
+        pHolder.ID = -1;
+        pHolder.name = "Zwolf"+ pHolder.ID;
+        pHolder.tHeight = gui.slSced[1].v;
+        pHolder.weight = gui.slSced[2].v;
+        pHolder.BMI = gui.slSced[3].v;
+        pHolder.tWidth = gui.slSced[4].v;
+        pHolder.bhratio = gui.slSced[5].v;
+        pHolder.age = (int) gui.slSced[6].v;
+        pHolder.r = (int) gui.slSced[7].v;
+        pHolder.g = (int) gui.slSced[8].v;
+        pHolder.b = (int) gui.slSced[9].v;
+
+        changeTFValues(pHolder);
         scene.addObject(pHolder);
     }
 
